# ArithmoGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Expression.cpp.F0111214F576A5AE.idx  Expression.hpp.6E4E9CCA19A721CD.idx  Solver.cpp.849E68131B9AA7B2.idx  Solver.hpp.B2B8CDA0FE94D5AC.idx  main.cpp.486F49600F1D4041.idx
include/ArithmoGen/: Expression.hpp  Solver.hpp
release/: ArithmoGen
release_build/: ArithmoGen
src/: Expression.cpp  Solver.cpp  main.cpp
